--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 1. Modify get_freq_res_xlr for simultaneous WF, TW and MR measurement.
 2. Test S-Serie Limiters.
 3. Change reference measurements of the shelving filters.
-4. Investigate clipping in the WF channel when volume set to + 12dB.
+4. Investigate clipping in the WF channel when volume set to + 12dB. (It is possible that the Limiter is Active)
+5. Filter Stability Test
